refactor!: move folders, update to .NET 10, add possibility to run with Azure Open AI, possibility to use Azure SignalR, create new README.md, add UserSecret

--- a/src/AIStream/wwwroot/index.html
+++ b/src/AIStream/wwwroot/index.html
@@ -33,6 +33,7 @@
     <div id="chatPage" class="chat-container hidden">
         <header>
             <h2 id="chatGroupName">Group Chat</h2>
+            <h2 id="chatUserName">User Name</h2>
             <div class="user-info">
                 <span id="connectionStatus" class="status-disconnected"></span>
             </div>
